# app_registration

./: .env  pyproject.toml
src/: database.py  main.py
src/auth/: models.py  schemas.py
src/migration/: env.py
src/migration/versions/: 9ffb4702269a_initial_revision.py
